Fixes the stats screen overflowing by allowing scrolling to see the cutoff content

--- a/css/style.css
+++ b/css/style.css
@@ -1546,6 +1546,7 @@ overflow-x: hidden;
 	padding-right: 10vw;
 	font-size: 1.5vw;
 	color: white;
+	overflow-y: auto;
 }
 
 #modReplaceBox, #modUpgradeBox{
